--- a/gestortareas/linkdocs/EAID_AE06CF21_6C1C_4689_B128_52310D9C5BB1.htm
+++ b/gestortareas/linkdocs/EAID_AE06CF21_6C1C_4689_B128_52310D9C5BB1.htm
@@ -113,9 +113,11 @@
     <td align="left" valign="top" width="107" style="border: solid #010101 1px;">
     <div align="left"><font face="Arial Narrow" color="#0f0f0f">Selector de grupo</font></div>
     </td>
-    <td align="left" valign="top" width="323" style="border: solid #010101 1px;"><font face="Arial Narrow" color="#0f0f0f">Permite seleccionar un grupo de la organizaci&#243;n.Obtiene los 
-    datos del servicio REST de <b>Grupo.</b> </font>
-    <div align="left"><font face="Arial Narrow" color="#0f0f0f">Se preseleccionar&#225; el primero de la lista.</font></div>
+    <td align="left" valign="top" width="323" style="border: solid #010101 1px;"><font face="Arial Narrow" color="#0f0f0f">Permite seleccionar un grupo de los que pertenece el 
+    usuario. Obtiene los datos del servicio REST de <b>Grupo</b>, 
+    filtrado por los grupos del usuario 
+    (miembroGrupo.miembro.usuario.uid)</font>
+    <div align="left"><font face="Arial Narrow" color="#0f0f0f"><br /></font></div><div align="left"><font face="Arial Narrow" color="#0f0f0f">Se preseleccionar&#225; el primero de la lista.</font></div>
     <div align="left">&nbsp;</div>
     </td></tr>
     <tr>
