--- a/gestortareas/EARoot/EA4/EA364.htm
+++ b/gestortareas/EARoot/EA4/EA364.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Grupo</title>
+<title>ESPECIFICACIÓN SERVICIOS DE BACK-END::Grupo</title>
 <link href="../../css/ea.css" rel="stylesheet" type="text/css" />
 <script>
 function initPage(src) {	
