--- a/gestortareas/EARoot/EA1/EA2/EA3/EA79.htm
+++ b/gestortareas/EARoot/EA1/EA2/EA3/EA79.htm
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">07/03/2021 13:56:34</td>
+			<td class="ObjectDetailsValue">07/04/2021 11:48:38</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
@@ -94,7 +94,7 @@ function nameClassifier(name, separator)
 			<td class="ObjectDetailsValue"><a href="EA69.htm">TRABAJO CON TARJETAS</a>, <a href="../../EA3/EA1/EA134.htm">Detalle de tablero</a>, <a href="../../../EA5/EA394.htm">Crear tareas</a></td>
 		</tr>
 	</table>
-	<div class="ObjectDetailsNotes">&lt;b&gt;Precondiciones:&lt;/b&gt;&lt;br/&gt;- Usuario identificado&lt;br/&gt;- El usuario es propietario del tablero donde se va a crear la tarjeta&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Escenario principal:&lt;/b&gt;&lt;br/&gt;- Un usuario accede a la vista del tablero y selecciona la opción &quot;Crear tarea&quot;&lt;br/&gt;- El sistema solicita el título de la tarea&lt;br/&gt;- El sistema crea la tarea y la asigna a la primera lista del tablero&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Postcondiciones:&lt;/b&gt;&lt;br/&gt;N/A&lt;br/&gt;&lt;br/&gt;</div>
+	<div class="ObjectDetailsNotes">&lt;b&gt;Precondiciones:&lt;/b&gt;&lt;br/&gt;- Usuario identificado&lt;br/&gt;- El usuario es propietario del tablero donde se va a crear la tarjeta&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Escenario principal:&lt;/b&gt;&lt;br/&gt;- Un usuario accede a la vista del tablero y selecciona la opción &quot;Crear tarea&quot;&lt;br/&gt;- El sistema solicita el título de la tarea&lt;br/&gt;- Si la lista donde se va a ubicar la tarjeta es de tipo TAREAS, el sistema solicita la fecha de inicio y de vencimiento, así como el responsable.&lt;br/&gt;- El sistema crea la tarea y la asigna a la primera lista del tablero&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Postcondiciones:&lt;/b&gt;&lt;br/&gt;N/A&lt;br/&gt;&lt;br/&gt;</div>
 
 	<div class="TableGroup" id="TableGroup">
 		<ul class="ItemTitle">
