--- a/gestortareas/EARoot/EA4/EA373.htm
+++ b/gestortareas/EARoot/EA4/EA373.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>ESPECIFICACIÓN SERVICIOS DE BACK-END::TablerosAPI</title>
+<title>TablerosAPI</title>
 <link href="../../css/ea.css" rel="stylesheet" type="text/css" />
 <script>
 function initPage(src) {	
@@ -42,7 +42,7 @@ function nameClassifier(name, separator)
 		</tr>
 		<tr>
 			<td class="ObjectDetailsTopic">Modified:</td>
-			<td class="ObjectDetailsValue">06/04/2021 11:16:58</td>
+			<td class="ObjectDetailsValue">07/04/2021 11:53:59</td>
 		</tr>
 		<tr style="height: 10px"><td colspan="2"></td></tr>
 		<tr>
