--- a/gestortareas/linkdocs/EAID_661DABEA_40E0_4210_AC4F_3407F96D2199.htm
+++ b/gestortareas/linkdocs/EAID_661DABEA_40E0_4210_AC4F_3407F96D2199.htm
@@ -37,44 +37,47 @@
     <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
     </td></tr>
     <tr>
-    <td align="left" valign="top" width="177" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <td align="left" valign="top" width="177" style="border: solid #010101 1px;"><font face="Calibri"><b>TARJETA_ASIGNADA / </b></font>
+    <div align="left"><font face="Calibri">Asignaci&#243;n de tarea</font></div>
     </td>
     <td align="left" valign="top" width="567" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <div align="left"><font face="Calibri">Ha sido asignado como responsable de la tarea &quot;{0}&quot; del tablero &quot;{1}&quot;</font></div>
     </td>
-    <td align="left" valign="top" width="195" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Titulo de la tarea</font>
+    <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
     </td></tr>
     <tr>
-    <td align="left" valign="top" width="177" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <td align="left" valign="top" width="177" style="border: solid #010101 1px;"><font face="Calibri"><b>LISTA_ELIMINADA / </b></font>
+    <div align="left"><font face="Calibri">Eliminaci&#243;n de lista</font></div>
     </td>
     <td align="left" valign="top" width="567" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <div align="left"><font face="Calibri" size="2">Se ha eliminado la lista &quot;{0}&quot; del tablero &quot;{1}&quot;en la que participaba como autorizado de la lista, o 
+    colaborador de alguna tarea.</font></div>
     </td>
-    <td align="left" valign="top" width="195" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Nombre de la lista</font>
+    <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
     </td></tr>
     <tr>
-    <td align="left" valign="top" width="177" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <td align="left" valign="top" width="177" style="border: solid #010101 1px;"><font face="Calibri"><b>AUTORIZADO_LISTA / </b></font>
+    <div align="left"><font face="Calibri">Autorizaci&#243;n en lista de 
+    tareas</font></div>
     </td>
     <td align="left" valign="top" width="567" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <div align="left"><font face="Calibri">Se le ha incluido como autorizado para mover tareas a la lista &quot;{0}&quot; del tablero &quot;{1}&quot;</font></div>
     </td>
-    <td align="left" valign="top" width="195" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Nombre de la lista</font>
+    <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
     </td></tr>
     <tr>
-    <td align="left" valign="top" width="177" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <td align="left" valign="top" width="177" style="border: solid #010101 1px;"><font face="Calibri"><b>NO_AUTORIZADO_LISTA / </b></font>
+    <div align="left"><font face="Calibri">Revocaci&#243;n de autorizaci&#243;n 
+    en lista de tareas</font></div>
     </td>
     <td align="left" valign="top" width="567" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <div align="left"><font face="Calibri">Se le ha retirado la autorizaci&#243;n para mover tareas a la lista &quot;{0}&quot; del tablero &quot;{1}&quot;</font></div>
     </td>
-    <td align="left" valign="top" width="195" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Nombre de la lista</font>
+    <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
     </td></tr>
     <tr>
     <td align="left" valign="top" width="177" style="border: solid #010101 1px;">
@@ -88,6 +91,6 @@
     </td></tr>
 </table>
 </div>
-<div align="left"><font size="2"><br /></font></div><div align="left">&nbsp;</div>
+<div align="left"><font face="Times New Roman" size="2"><br /></font></div><div align="left">&nbsp;</div>
 </body>
 </html>
