--- a/gestortareas/linkdocs/EAID_7440F09D_EC27_40ba_93AC_E54D8EE4ABED.htm
+++ b/gestortareas/linkdocs/EAID_7440F09D_EC27_40ba_93AC_E54D8EE4ABED.htm
@@ -5244,11 +5244,12 @@
     <div align="left">&nbsp;</div>
     </td></tr>
     <tr>
-    <td colspan="5" align="center" valign="top" width="161" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <td colspan="5" align="center" valign="top" width="161" height="44" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
     <div align="center"><font face="Calibri"><b>POSTCONDICIONES</b></font></div>
     </td>
-    <td colspan="9" align="left" valign="top" width="491" height="33" style="border: solid #010101 1px;">
-    <div align="left"><span style="font-size: 11pt;"></span></div>
+    <td colspan="9" align="left" valign="top" width="491" height="44" style="border: solid #010101 1px;"><font face="Calibri" size="1">Si el responsable de la tarjeta est&#225; informado, se env&#237;a una notificacion de tipo TARJETA_ASIGNADA 
+    al responsable (participante).</font>
+    <div align="left">&nbsp;</div>
     </td></tr>
     <tr>
     <td colspan="5" align="center" valign="top" width="161" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
