--- a/gestortareas/linkdocs/EAID_661DABEA_40E0_4210_AC4F_3407F96D2199.htm
+++ b/gestortareas/linkdocs/EAID_661DABEA_40E0_4210_AC4F_3407F96D2199.htm
@@ -101,6 +101,26 @@
     <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Titulo de la tarjeta</font>
     <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
     </td></tr>
+    <tr>
+    <td align="left" valign="top" width="177" style="border: solid #010101 1px;"><font face="Calibri"><b>SEGUIDOR_LISTA / </b></font>
+    <div align="left"><font face="Calibri">Seguimiento de lista</font></div>
+    </td>
+    <td align="left" valign="top" width="567" style="border: solid #010101 1px;"><font face="Calibri" size="2">Le han incluido a usted o a su grupo como seguidor de la lista {0} del tablero {1}</font>
+    <div align="left">&nbsp;</div>
+    </td>
+    <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Nombre de la lista</font>
+    <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
+    </td></tr>
+    <tr>
+    <td align="left" valign="top" width="177" style="border: solid #010101 1px;"><font face="Calibri"><b>NO_SEGUIDOR_LISTA / </b></font>
+    <div align="left"><font face="Calibri">No seguimiento de lista</font></div>
+    </td>
+    <td align="left" valign="top" width="567" style="border: solid #010101 1px;"><font face="Calibri" size="2">Le han retirado a usted o a su grupo como seguidor de la lista {0} del tablero {1}</font>
+    <div align="left">&nbsp;</div>
+    </td>
+    <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Nombre de la lista</font>
+    <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
+    </td></tr>
 </table>
 </div>
 <div align="left"><font face="Times New Roman" size="2"><br /></font></div><div align="left">&nbsp;</div>
