--- a/gestortareas/linkdocs/EAID_7440F09D_EC27_40ba_93AC_E54D8EE4ABED.htm
+++ b/gestortareas/linkdocs/EAID_7440F09D_EC27_40ba_93AC_E54D8EE4ABED.htm
@@ -5578,6 +5578,280 @@
     </td></tr>
 </table>
 </div>
+<div align="left"><font size="2"><br /></font></div><br clear='all' style='page-break-before:always' />
+<div align="left"><br/>&nbsp;</div>
+<div style="margin-left: -4mm;">
+<table width="678" cellpadding="6" cellspacing="0" style="table-layout: fixed; border-collapse: collapse; border-width: 1px; border-color: #010101; ">
+    <colgroup>
+        <col width="108"></col>
+        <col width="12"></col>
+        <col width="42"></col>
+        <col width="7"></col>
+        <col width="5"></col>
+        <col width="60"></col>
+        <col width="6"></col>
+        <col width="30"></col>
+        <col width="66"></col>
+        <col width="11"></col>
+        <col width="113"></col>
+        <col width="48"></col>
+        <col width="28"></col>
+        <col width="142"></col>
+    </colgroup>
+    <tr>
+    <td colspan="6" align="left" valign="top" width="221" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri"><b>NOMBRE OPERACI&#211;N</b></font></div>
+    </td>
+    <td colspan="5" align="left" valign="top" width="214" style="border: solid #010101 1px;">
+    <div align="left"><font face="Calibri"><b>reordenarTarjetaEnLista</b></font></div>
+    </td>
+    <td colspan="2" align="left" valign="top" width="63" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri"><b>M&#233;todo</b></font></div>
+    </td>
+    <td align="left" valign="top" width="129" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri" size="1">POST</font></div>
+    </td></tr>
+    <tr>
+    <td colspan="6" align="left" valign="top" width="221" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri"><b>TRANSACCIONAL</b></font></div>
+    </td>
+    <td colspan="4" align="left" valign="top" width="100" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri"><b>SI</b></font></div>
+    </td>
+    <td align="left" valign="top" width="100" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri"><b>AUDITADO</b></font></div>
+    </td>
+    <td colspan="3" align="left" valign="top" width="204" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri"><b>SI</b></font></div>
+    </td></tr>
+    <tr>
+    <td colspan="6" align="left" valign="top" width="221" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri"><b>DESCRIPCION</b></font></div>
+    </td>
+    <td colspan="8" align="left" valign="top" width="431" height="33" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri" size="1">Reordena una tarjeta en su propia lista</font></div>
+    </td></tr>
+    <tr>
+    <td colspan="6" align="left" valign="top" width="221" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri"><b>URL</b></font></div>
+    </td>
+    <td colspan="8" align="left" valign="top" width="431" height="33" style="border: solid #010101 1px;">
+    <div align="justify"><span style="font-size: 9pt;"></span></div>
+    </td></tr>
+    <tr>
+    <td colspan="14" align="center" valign="top" width="665" height="32" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>PAR&#193;METROS SOLICITUD </b></font><font face="Calibri" size="1"><b>(U:URI,B:BODY, H:Cabecera/Header)</b></font></div>
+    </td></tr>
+    <tr>
+    <td align="center" valign="top" width="95" height="32" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>NOMBRE</b></font></div>
+    </td>
+    <td colspan="2" align="center" valign="top" width="41" height="32" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>U/B</b></font></div>
+    </td>
+    <td colspan="4" align="center" valign="top" width="65" height="32" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>TIPO</b></font></div>
+    </td>
+    <td colspan="2" align="center" valign="top" width="83" height="32" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>REQUERIDO</b></font></div>
+    </td>
+    <td colspan="5" align="center" valign="top" width="329" height="32" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>DESCRIPCI&#211;N</b></font></div>
+    </td></tr>
+    <tr>
+    <td align="center" valign="top" width="95" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">tarjeta</font></div>
+    </td>
+    <td colspan="2" align="center" valign="top" width="41" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">U</font></div>
+    </td>
+    <td colspan="4" align="center" valign="top" width="65" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">GUID</font></div>
+    </td>
+    <td colspan="2" align="center" valign="top" width="83" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">SI</font></div>
+    </td>
+    <td colspan="5" align="center" valign="top" width="329" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">Id de la tarjeta que se quiere mover.</font></div>
+    </td></tr>
+    <tr>
+    <td align="center" valign="top" width="95" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">orden</font></div>
+    </td>
+    <td colspan="2" align="center" valign="top" width="41" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">U</font></div>
+    </td>
+    <td colspan="4" align="center" valign="top" width="65" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">Entero</font></div>
+    </td>
+    <td colspan="2" align="center" valign="top" width="83" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">SI</font></div>
+    </td>
+    <td colspan="5" align="center" valign="top" width="329" height="28" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri" size="1">Nueva posici&#243;n dentro de la lista</font></div>
+    </td></tr>
+    <tr>
+    <td colspan="14" align="center" valign="top" width="665" height="32" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>RESPUESTA</b></font></div>
+    </td></tr>
+    <tr>
+    <td colspan="3" align="center" valign="top" width="149" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>TIPO</b></font></div>
+    </td>
+    <td colspan="11" align="center" valign="top" width="503" height="33" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri">N/A</font></div>
+    </td></tr>
+    <tr>
+    <td colspan="3" align="center" valign="top" width="149" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>NOMBRE</b></font></div>
+    </td>
+    <td colspan="5" align="center" valign="top" width="95" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>TIPO</b></font></div>
+    </td>
+    <td colspan="6" align="center" valign="top" width="395" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>DESCRIPCI&#211;N</b></font></div>
+    </td></tr>
+    <tr>
+    <td colspan="3" align="center" valign="top" width="149" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 8pt;"></span></div>
+    </td>
+    <td colspan="5" align="center" valign="top" width="95" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 8pt;"></span></div>
+    </td>
+    <td colspan="6" align="left" valign="top" width="395" style="border: solid #010101 1px;">
+    <div align="left"><span style="font-size: 8pt;"></span></div>
+    </td></tr>
+    <tr>
+    <td colspan="3" align="center" valign="top" width="149" height="26" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 8pt;"></span></div>
+    </td>
+    <td colspan="5" align="center" valign="top" width="95" height="26" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 8pt;"></span></div>
+    </td>
+    <td colspan="6" align="center" valign="top" width="395" height="26" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 8pt;"></span></div>
+    </td></tr>
+    <tr>
+    <td colspan="3" align="center" valign="top" width="149" height="26" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 8pt;"></span></div>
+    </td>
+    <td colspan="5" align="center" valign="top" width="95" height="26" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 8pt;"></span></div>
+    </td>
+    <td colspan="6" align="center" valign="top" width="395" height="26" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 8pt;"></span></div>
+    </td></tr>
+    <tr>
+    <td colspan="2" align="center" valign="top" width="107" height="55" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>PROCESO</b></font></div>
+    </td>
+    <td colspan="12" align="left" valign="top" width="545" height="55" style="border: solid #010101 1px;">
+    <div align="justify"><font face="Calibri" size="1">Se reordenar&#225;n la tarjeta dentro de la lista, para reflejar el orden solicitado para la tarjeta que se ha 
+    movido.</font></div>
+    <div align="justify">&nbsp;</div>
+    </td></tr>
+    <tr>
+    <td colspan="2" align="center" valign="top" width="107" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>DEPENDENCIAS</b></font></div>
+    </td>
+    <td colspan="12" align="left" valign="top" width="545" height="33" style="border: solid #010101 1px;">
+    <div align="justify"><span style="font-size: 11pt;"></span></div>
+    </td></tr>
+    <tr>
+    <td colspan="4" align="center" valign="top" width="156" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 11pt;"></span></div>
+    </td>
+    <td colspan="5" align="center" valign="top" width="154" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>AN&#211;NIMO</b></font></div>
+    </td>
+    <td colspan="3" align="center" valign="top" width="159" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>AUTENTICADO</b></font></div>
+    </td>
+    <td colspan="2" align="center" valign="top" width="157" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>ROLES</b></font></div>
+    </td></tr>
+    <tr>
+    <td colspan="4" align="center" valign="top" width="156" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>SEGURIDAD DE ACCESO</b></font></div>
+    </td>
+    <td colspan="5" align="center" valign="top" width="154" height="33" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 11pt;"></span></div>
+    </td>
+    <td colspan="3" align="center" valign="top" width="159" height="33" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri">X</font></div>
+    </td>
+    <td colspan="2" align="center" valign="top" width="157" height="33" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri">USUARIO</font></div>
+    </td></tr>
+    <tr>
+    <td colspan="6" align="center" valign="top" width="221" height="32" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>PROCESO DIFERENCIADO POR ROL</b></font></div>
+    </td>
+    <td colspan="8" align="center" valign="top" width="431" height="32" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri">NO</font></div>
+    </td></tr>
+    <tr>
+    <td colspan="5" align="center" valign="top" width="161" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>ROL</b></font></div>
+    </td>
+    <td colspan="9" align="center" valign="top" width="491" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>VARIACI&#211;N RESPECTO AL PROCESO</b></font></div>
+    </td></tr>
+    <tr>
+    <td colspan="5" align="center" valign="top" width="161" height="33" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 11pt;"></span></div>
+    </td>
+    <td colspan="9" align="center" valign="top" width="491" height="33" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 11pt;"></span></div>
+    </td></tr>
+    <tr>
+    <td colspan="14" align="center" valign="top" width="665" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>RESTRICCIONES</b></font></div>
+    </td></tr>
+    <tr>
+    <td colspan="5" align="center" valign="top" width="161" height="90" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>PRECONDICIONES</b></font></div>
+    </td>
+    <td colspan="9" align="left" valign="top" width="491" height="90" style="border: solid #010101 1px;"><font face="Calibri">- El usuario debe cumplir <b><u>cualquiera</u></b> de las siguientes condiciones:</font>
+    <div align="left"><font face="Calibri">&#160;&#160;&#160;&#160;&#160; - Pertenece al grupo propietario del tablero donde se ubica la tarjeta</font></div>
+    <div align="left"><font face="Calibri">&#160;&#160;&#160;&#160;&#160; - Es responsable (directo a por sus grupos) de la tarjeta.</font></div>
+    <div align="left"><font face="Calibri">&#160;&#160;&#160;&#160;&#160; - Es autorizado (directo o por sus grupos) de la lista</font></div>
+    <div align="left">&nbsp;</div>
+    </td></tr>
+    <tr>
+    <td colspan="5" align="center" valign="top" width="161" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>POSTCONDICIONES</b></font></div>
+    </td>
+    <td colspan="9" align="left" valign="top" width="491" height="33" style="border: solid #010101 1px;">
+    <div align="left"><span style="font-size: 9pt;"></span></div>
+    </td></tr>
+    <tr>
+    <td colspan="5" align="center" valign="top" width="161" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>INVARIANTES</b></font></div>
+    </td>
+    <td colspan="9" align="left" valign="top" width="491" height="33" style="border: solid #010101 1px;">
+    <div align="left"><span style="font-size: 11pt;"></span></div>
+    </td></tr>
+    <tr>
+    <td colspan="14" align="center" valign="top" width="665" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>MENSAJES ERROR ESPEC&#205;FICOS M&#201;TODO</b></font></div>
+    </td></tr>
+    <tr>
+    <td colspan="5" align="center" valign="top" width="161" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>C&#211;DIGO</b></font></div>
+    </td>
+    <td colspan="9" align="center" valign="top" width="491" height="33" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <div align="center"><font face="Calibri"><b>MENSAJE</b></font></div>
+    </td></tr>
+    <tr>
+    <td colspan="5" align="center" valign="top" width="161" height="33" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 11pt;"></span></div>
+    </td>
+    <td colspan="9" align="center" valign="top" width="491" height="33" style="border: solid #010101 1px;">
+    <div align="center"><span style="font-size: 11pt;"></span></div>
+    </td></tr>
+</table>
+</div>
 <div align="left">&nbsp;</div>
 </body>
 </html>
