--- a/gestortareas/linkdocs/EAID_C9799E6D_B1BE_42b0_A05D_B4424F5671D7.htm
+++ b/gestortareas/linkdocs/EAID_C9799E6D_B1BE_42b0_A05D_B4424F5671D7.htm
@@ -184,12 +184,14 @@
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><br /></font></div><div align="left"><font face="Arial Narrow" color="#0f0f0f"><b>- Editar: </b>Visible para usuario propietario</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><b>- Autorizados...: </b>Visible siempre</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><b>- Seguir lista: </b></font></div>
-    <div align="left"><font face="Arial Narrow" color="#0f0f0f">&#160;&#160;&#160; - Visible para usuarios autorizados en cualquier lista del tablero, y para 
-    usuarios compartidos del tablero.</font></div>
+    <div align="left"><font face="Arial Narrow" color="#0f0f0f">&#160;&#160;&#160; - Visible para usuarios del grupo propietario del tablero, usuarios 
+    autorizados en cualquier lista del tablero, y para usuarios compartidos del 
+    tablero.</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f">&#160;&#160;&#160; - Habilitado si el usuario NO es seguidor de la lista.</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><b>- Dejar de seguir lista:</b> </font></div>
-    <div align="left"><font face="Arial Narrow" color="#0f0f0f">&#160;&#160;&#160;&#160; - Visible para usuarios autorizados en cualquier lista del tablero, y para 
-    usuarios compartidos del tablero.</font></div>
+    <div align="left"><font face="Arial Narrow" color="#0f0f0f">&#160;&#160;&#160;&#160; - Visible para usuarios del grupo propietario del tablero, usuarios 
+    autorizados en cualquier lista del tablero, y para usuarios compartidos del 
+    tablero.</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f">&#160;&#160;&#160; - Habilitado si el usuario ES seguidor de la lista.</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><b>- Seguidores...</b>:&#160; Visible siempre.</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><b>- Permitir tarjetas desde...: </b>Visible para usuario propietario. </font></div>
@@ -306,13 +308,13 @@
     <div align="center"><font face="Arial Narrow"><b>&#160;DESCRIPCION DEL PROCESO A EJECUTAR</b></font></div>
     </td></tr>
     <tr>
-    <td align="left" valign="top" width="89" height="203" style="border: solid #010101 1px;">
+    <td align="left" valign="top" width="89" height="236" style="border: solid #010101 1px;">
     <div align="left"><font face="Arial Narrow" color="#0f0f0f">Iniciar vista</font></div>
     </td>
-    <td align="left" valign="top" width="89" height="203" style="border: solid #010101 1px;">
+    <td align="left" valign="top" width="89" height="236" style="border: solid #010101 1px;">
     <div align="left"><span style="font-size: 11pt;"></span></div>
     </td>
-    <td align="left" valign="top" width="377" height="203" style="border: solid #010101 1px;"><font face="Arial Narrow" color="#0f0f0f">Se recuperar&#225;n en sucesivas llamadas al backend:</font>
+    <td align="left" valign="top" width="377" height="236" style="border: solid #010101 1px;"><font face="Arial Narrow" color="#0f0f0f">Se recuperar&#225;n en sucesivas llamadas al backend:</font>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><br /></font></div><div align="left"><font face="Arial Narrow" color="#0f0f0f">- Datos b&#225;sicos del tablero (<b>REST Tablero</b>)</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><br /></font></div><div align="left"><font face="Arial Narrow" color="#0f0f0f">- Listas del tablero (<b>REST Lista</b>)</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><br /></font></div><div align="left"><font face="Arial Narrow" color="#0f0f0f">- Tarjetas del tablero (<b>REST de Tarjeta</b>)</font></div>
@@ -719,9 +721,9 @@
     <b>TablerosAPI/moverTarjetaALista</b>, pasando el id de la tarjeta, el id de 
     la lista, y el orden relativo de la tarjeta en la lista de destino.</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><br /></font></div><div align="left"><font face="Arial Narrow" color="#0f0f0f">En el caso en que se arrastre una tarjeta sobre su misma lista, 
-    simplemente para reordenar la tarjeta en ella, se llamar&#225; a la misma 
-    API <b>TablerosAPI/moverTarjetaALista</b>, pasando tambi&#233;n el id de la 
-    tarjeta, el id de la lista (que ser&#225; la actual), y el nuevo orden en la lista.</font></div>
+    simplemente para reordenar la tarjeta en ella, se llamar&#225; a la API 
+    <b>TablerosAPI/reordenarTarjetaEnLista</b>, pasando el id de la tarjeta y 
+    el nuevo orden en la lista.</font></div>
     <div align="left"><font face="Arial Narrow" color="#0f0f0f"><br /></font></div><div align="left"><font face="Arial Narrow" color="#0f0f0f">Al recuperar el control, se actualizar&#225; la vista de la tarjeta, con el color 
     de la nueva lista asignada.</font></div>
     <div align="left">&nbsp;</div>
