--- a/gestortareas/linkdocs/EAID_661DABEA_40E0_4210_AC4F_3407F96D2199.htm
+++ b/gestortareas/linkdocs/EAID_661DABEA_40E0_4210_AC4F_3407F96D2199.htm
@@ -107,7 +107,7 @@
     tarea</font></div>
     </td>
     <td align="left" valign="top" width="567" style="border: solid #010101 1px;">
-    <div align="left"><font face="Calibri">Ha sido retirado como colaborador en la tarea &quot;{0}&quot; del tablero &quot;{1}&quot;.</font></div>
+    <div align="left"><font face="Calibri">Usted o su grupo ha sido designado como colaborador en la tarea &quot;{0}&quot; del tablero &quot;{1}&quot;.</font></div>
     </td>
     <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Titulo de la tarjeta</font>
     <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
@@ -118,7 +118,7 @@
     tarea</font></div>
     </td>
     <td align="left" valign="top" width="567" style="border: solid #010101 1px;">
-    <div align="left"><font face="Calibri">Usted o su grupo ha sido designado como colaborador en la tarea &quot;{0}&quot; del tablero &quot;{1}&quot;.</font></div>
+    <div align="left"><font face="Calibri">Ha sido retirado como colaborador en la tarea &quot;{0}&quot; del tablero &quot;{1}&quot;.</font></div>
     </td>
     <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Titulo de la tarjeta</font>
     <div align="left"><font face="Calibri">1: Nombre del tablero</font></div>
@@ -220,7 +220,7 @@
     la tarea superior</font></div>
     </td></tr>
     <tr>
-    <td align="left" valign="top" width="177" style="border: solid #010101 1px;"><font face="Calibri"><b>SUBTAREA_ASIGNADA / </b></font>
+    <td align="left" valign="top" width="177" style="border: solid #010101 1px;"><font face="Calibri"><b>SUBTAREA_ELIMINADA / </b></font>
     <div align="left"><font face="Calibri">Anulaci&#243;n de asignaci&#243;n de 
     subtarea</font></div>
     </td>
@@ -266,6 +266,16 @@
     <td align="left" valign="top" width="195" style="border: solid #010101 1px;"><font face="Calibri">0: Titulo de la tarea superior</font>
     <div align="left"><font face="Calibri">1: Nombre del tablero de la 
     tarea superior</font></div>
+    </td></tr>
+    <tr>
+    <td align="left" valign="top" width="177" style="border: solid #010101 1px;"><font face="Calibri"><b>TABLERO_ELIMINADO / </b></font>
+    <div align="left"><font face="Calibri">Tablero eliminado</font></div>
+    </td>
+    <td align="left" valign="top" width="567" style="border: solid #010101 1px;">
+    <div align="left"><font face="Calibri" size="2">El tablero &quot;{0}&quot;, en el que usted participaba, ha sido eliminado por su propietario.</font></div>
+    </td>
+    <td align="left" valign="top" width="195" style="border: solid #010101 1px;">
+    <div align="left"><font face="Calibri">0: Nombre del tablero</font></div>
     </td></tr>
 </table>
 </div>
