--- a/gestortareas/linkdocs/EAID_7440F09D_EC27_40ba_93AC_E54D8EE4ABED.htm
+++ b/gestortareas/linkdocs/EAID_7440F09D_EC27_40ba_93AC_E54D8EE4ABED.htm
@@ -3917,23 +3917,23 @@
     <div align="center"><span style="font-size: 8pt;"></span></div>
     </td></tr>
     <tr>
-    <td colspan="2" align="center" valign="top" width="107" height="489" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
+    <td colspan="2" align="center" valign="top" width="107" height="472" bgcolor="#c0c0c0" style="border: solid #010101 1px;">
     <div align="center"><font face="Calibri"><b>PROCESO</b></font></div>
     </td>
-    <td colspan="12" align="left" valign="top" width="545" height="489" style="border: solid #010101 1px;">
+    <td colspan="12" align="left" valign="top" width="545" height="472" style="border: solid #010101 1px;">
     <div align="justify"><font face="Calibri" size="1">- Si la lista de destino es la <b><u>misma</u></b> que la lista actual de la tarjeta, se realizar&#225; un cambio de orden de la 
     tarjeta. Para ello se reordenar&#225;n todas las tarjetas de la lista, de forma que el orden quede correlativo 
     pero reflejando el cambio solicitado.</font></div>
     <div align="justify"><font face="Courier New" size="1"><br /></font></div><div align="justify"><font face="Calibri" size="1">- Si la lista de destino es <b><u>diferente</u></b> de la lista actual:</font></div>
     <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160; a. Se validar&#225; si la lista de destino <b>tiene autorizados</b>. Para ello debe cumplirse <b><u>alguna</u></b> de estas 
     condiciones:</font></div>
-    <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 1. La lista de destino NO tiene asignados autorizados (AutorizadoLista), y el usuario es responsable 
+    <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 1. En cualquier caso est&#225; autorizado el grupo propietario del tablero</font></div>
+    <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 2. La lista de destino NO tiene asignados autorizados (AutorizadoLista), y el usuario es responsable 
     de la tarjeta.</font></div>
-    <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 2. La lista de destino SI tiene asignados autorizados (AutorizadoLista), y el usuario forma parte de 
+    <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 3. La lista de destino SI tiene asignados autorizados (AutorizadoLista), y el usuario forma parte de 
     dichos autorizados.</font></div>
-    <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; </font><font face="Calibri" color="#ff0000" size="1">3. La lista de destino SI tiene asignados autorizados (AutorizadoLista), y el usuario forma parte del 
-    grupo propietario del tablero.</font></div>
-    <div align="justify"><font face="Calibri" size="1"><br /></font></div><div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160; b. Se validar&#225; si la lista de destino tiene el <b>origen de las tarjetas restringido</b>. Para ello debe cumplirse 
+    <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; </font></div>
+    <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160; b. Se validar&#225; si la lista de destino tiene el <b>origen de las tarjetas restringido</b>. Para ello debe cumplirse 
     <b><u>alguna</u></b> de estas condiciones:</font></div>
     <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 1. La lista de destino NO tiene los origenes restringidos (origenRestringido = false).</font></div>
     <div align="justify"><font face="Calibri" size="1">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 2. La lista de destino SI tiene los origenes restringidos, y la lista actual de la tarjeta est&#225; incluido en 
