--- a/gestortareas/linkdocs/EAID_92A3479E_6A49_45b9_AA25_C72CAF8868C2.htm
+++ b/gestortareas/linkdocs/EAID_92A3479E_6A49_45b9_AA25_C72CAF8868C2.htm
@@ -44,6 +44,7 @@
     <td colspan="4" align="left" valign="top" width="437" style="border: solid #010101 1px;">
     <ul style="margin-top: 0mm; margin-bottom: 0mm; padding-left: 0; margin-left: 0; list-style-type: disc; ">
     <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="Arial Narrow">lista: Opcional. ID de la lista donde se va a ubicar la nueva tarjeta</font></li>
+    <li style="margin-left: 9pt; margin-right: 0pt; padding-left: 0pt; font-size: 11pt;  color: #010101;  "><font face="Arial Narrow">tareaSuperior: Opcional. Tarea superior de la que depende la nueva tarea.</font></li>
     </ul>
     </td></tr>
     <tr>
@@ -217,8 +218,8 @@
     </td>
     <td align="left" valign="top" width="377" height="101" style="border: solid #010101 1px;"><font face="Arial Narrow" color="#0f0f0f">Se crea un nuevo objeto de tipo Tarjeta, y se inicializa con los valores 
     por defecto.</font>
-    <div align="left"><font face="Arial Narrow" color="#0f0f0f"><br /></font></div><div align="left"><font face="Arial Narrow" color="#0f0f0f">Se asigna a la tarjeta la lista pasada como parametro, si viene 
-    informado.</font></div>
+    <div align="left"><font face="Arial Narrow" color="#0f0f0f"><br /></font></div><div align="left"><font face="Arial Narrow" color="#0f0f0f">Se asigna a la tarjeta la lista y la tarea superior pasados como 
+    parametros, si vienen informados.</font></div>
     <div align="left">&nbsp;</div>
     </td></tr>
     <tr>
